// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxControls it should be null when this box is not chosen and not entered 1`] = `null`;

exports[`BoxControls it should have 4 side draw divs and 1 drag div when this box is chosen and not entered 1`] = `
Array [
  <div
    onDoubleClick={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "bottom": "0px",
        "cursor": "default",
        "display": "block",
        "left": "0px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
        "zIndex": "16777270",
      }
    }
  />,
  <div
    onMouseDown={[Function]}
    style={
      Object {
        "background": "rgb(169, 215, 232)",
        "border": "1px solid grey",
        "borderRadius": "20px",
        "boxSizing": "border-box",
        "cursor": "w-resize",
        "display": "block",
        "height": "20px",
        "left": "-10px",
        "position": "absolute",
        "top": "calc(50% - 10px)",
        "width": "20px",
        "zIndex": "16777270",
      }
    }
  />,
  <div
    onMouseDown={[Function]}
    style={
      Object {
        "background": "rgb(169, 215, 232)",
        "border": "1px solid grey",
        "borderRadius": "20px",
        "boxSizing": "border-box",
        "cursor": "e-resize",
        "display": "block",
        "height": "20px",
        "position": "absolute",
        "right": "-10px",
        "top": "calc(50% - 10px)",
        "width": "20px",
        "zIndex": "16777270",
      }
    }
  />,
  <div
    onMouseDown={[Function]}
    style={
      Object {
        "background": "rgb(169, 215, 232)",
        "border": "1px solid grey",
        "borderRadius": "20px",
        "boxSizing": "border-box",
        "cursor": "n-resize",
        "display": "block",
        "height": "20px",
        "left": "calc(50% - 10px)",
        "position": "absolute",
        "top": "-10px",
        "width": "20px",
        "zIndex": "16777270",
      }
    }
  />,
  <div
    onMouseDown={[Function]}
    style={
      Object {
        "background": "rgb(169, 215, 232)",
        "border": "1px solid grey",
        "borderRadius": "20px",
        "bottom": "-10px",
        "boxSizing": "border-box",
        "cursor": "s-resize",
        "display": "block",
        "height": "20px",
        "left": "calc(50% - 10px)",
        "position": "absolute",
        "width": "20px",
        "zIndex": "16777270",
      }
    }
  />,
]
`;

exports[`BoxControls it should have drag div when this box is not chosen and not entered 1`] = `
<div
  onDoubleClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "bottom": "0px",
      "cursor": "default",
      "display": "block",
      "left": "0px",
      "position": "absolute",
      "right": "0px",
      "top": "0px",
      "zIndex": "16777270",
    }
  }
/>
`;
